--- a/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj.filters
+++ b/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Lounge.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CsvReader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Guest.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lounge.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CsvReader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
