able to seat guests to the lounge

--- a/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj
+++ b/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="CsvReader.cpp" />
     <ClCompile Include="Guest.cpp" />
+    <ClCompile Include="InitMain.cpp" />
     <ClCompile Include="Lounge.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Queue.cpp" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="CsvReader.h" />
     <ClInclude Include="Guest.h" />
+    <ClInclude Include="InitMain.h" />
     <ClInclude Include="Lounge.h" />
     <ClInclude Include="Queue.h" />
   </ItemGroup>
