--- a/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj.filters
+++ b/LoungeQueueSystem/LoungeQueueSystem/LoungeQueueSystem.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CsvReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InitMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Guest.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CsvReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="InitMain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
